# CYDevice

./: .gitmodules  CMakeLists.txt  README.md
Inc/CYDevice/: CYDeviceDefine.hpp  CYDeviceFatory.hpp  CYDeviceHelper.hpp  ICYDevice.hpp
Samples/CYDeviceTest/: CMakeLists.txt  CVideoRender.cpp  CVideoRender.h  CYDeviceTest.aps  CYDeviceTest.cpp  CYDeviceTest.h  CYDeviceTest.rc  CYDeviceTest.vcxproj  CYDeviceTest.vcxproj.filters  CYDeviceTestDlg.cpp  CYDeviceTestDlg.h  resource.h
Samples/CYDeviceTest/Render/: GDIPlusRender.cpp  GDIPlusRender.h  MemDC.h
Samples/CYDeviceTest/res/: CYDeviceTest.rc2
Samples/CYDeviceTest/x64/Debug/: CYDeviceTest.exe.recipe  CYDeviceTest.res  vc143.idb
Samples/CYDeviceTest/x64/Debug/CYDeviceTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CYDeviceTest.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Src/: CYDeviceFactory.cpp  CYDeviceHelper.cpp  CYDeviceImpl.cpp  CYDeviceImpl.hpp
Src/Capture/: IDeviceCapture.hpp
Src/Capture/Win/: DShowCommonDefine.hpp  ReSampleRateDefine.hpp  WinDeviceCaptrue.cpp  WinDeviceCaptrue.hpp
Src/Common/: CYDevicePrivDefine.hpp  CYStringHelper.cpp  CYStringHelper.hpp
Src/Common/Win/: IDeviceSource.h  IVideoCaptureFilter.h
Src/Common/Win/CaptureFilter/: CaptureFilter.cpp  CaptureFilter.h
Src/Control/: CYDeviceControl.cpp  CYDeviceControl.hpp
